# CitadelAlliance

./: CMakeLists.txt  Dockerfile  README  setup.sh
CitadelAllianceGameLogic/: CMakeLists.txt  GameLogic.pc.in
CitadelAllianceGameLogic/include/GameLogic/: CJsonSerializer.h  Card.h  GameLogic.h  GameUnit.h  HaltonCard.h  HaltonUnit.h  IJsonSerializable.h  IObjective.h  IObjectiveGranter.h  MoveableGameUnit.h  MoveableUnitBehaviourAI.h  SpawnPoint.h  UnitBehaviourAI.h  UnitDestroyObjective.h  UnitMoveObjective.h  UnitState.h
CitadelAllianceGameLogic/src/: CJsonSerializer.cpp  GameLogic.cpp  GameUnit.cpp  MoveableGameUnit.cpp  MoveableUnitBehaviourAI.cpp  SpawnPoint.cpp  UnitMoveObjective.cpp  UnitState.cpp
CitadelAllianceGameMapBind/: CMakeLists.txt
CitadelAllianceGameMapBind/include/GameMapBind/: GameMapBind.h
CitadelAllianceGameMapBind/src/: GameMapBind.cpp
CitadelAllianceGameServer/: CMakeLists.txt
CitadelAllianceGameServer/include/GameServer/: Constants.h  Game.h  IJsonSerializable.h  IServer.h  Log.h  Player.h  Server.h  game_data.h  locked_queue.h
CitadelAllianceGameServer/src/: Game.cpp  Server.cpp  main.cpp
CitadelAllianceRecastDetourControl/: CMakeLists.txt
CitadelAllianceRecastDetourControl/include/RecastDetourControl/: ChunkyTriMesh.h  GameMap.h  Interfaces.h  MeshLoaderObj.h  MeshPreparer.h  NavMapController.h  PerfTimer.h  Sample.h  fastlz.h
CitadelAllianceRecastDetourControl/src/: ChunkyTriMesh.cpp  GameMap.cpp  Interfaces.cpp  MeshLoaderObj.cpp  MeshPreparer.cpp  NavMapController.cpp  PerfTimer.cpp  Sample.cpp  fastlz.c
CitadelAllianceUtilLibrary/: CMakeLists.txt
CitadelAllianceUtilLibrary/include/UtilLibrary/: camathfuncs.h
CitadelAllianceUtilLibrary/src/: camathfuncs.cpp
RecastNavigation/: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  appveyor.yml
RecastNavigation/DebugUtils/: CMakeLists.txt
RecastNavigation/DebugUtils/Include/DebugUtils/: DebugDraw.h  detourdebugdraw.h
RecastNavigation/DebugUtils/Source/: DebugDraw.cpp  DetourDebugDraw.cpp  RecastDebugDraw.cpp  RecastDump.cpp
RecastNavigation/Detour/: CMakeLists.txt
RecastNavigation/Detour/Include/Detour/: DetourCommon.h
RecastNavigation/Detour/Source/: DetourAlloc.cpp  DetourAssert.cpp  DetourCommon.cpp  DetourNavMesh.cpp  DetourNavMeshBuilder.cpp  DetourNavMeshQuery.cpp  DetourNode.cpp
RecastNavigation/DetourCrowd/: CMakeLists.txt
RecastNavigation/DetourCrowd/Include/DetourCrowd/: DetourCrowd.h  DetourLocalBoundary.h  DetourPathCorridor.h  DetourPathQueue.h
RecastNavigation/DetourCrowd/Source/: DetourCrowd.cpp  DetourLocalBoundary.cpp  DetourObstacleAvoidance.cpp  DetourPathCorridor.cpp  DetourPathQueue.cpp  DetourProximityGrid.cpp
RecastNavigation/DetourTileCache/: CMakeLists.txt
RecastNavigation/DetourTileCache/Include/DetourTileCache/: DetourTileCache.h  DetourTileCacheBuilder.h
RecastNavigation/DetourTileCache/Source/: DetourTileCache.cpp  DetourTileCacheBuilder.cpp
RecastNavigation/Recast/: CMakeLists.txt
RecastNavigation/Recast/Source/: Recast.cpp  RecastAlloc.cpp  RecastArea.cpp  RecastAssert.cpp  RecastContour.cpp  RecastFilter.cpp  RecastLayers.cpp  RecastMesh.cpp  RecastMeshDetail.cpp  RecastRasterization.cpp  RecastRegion.cpp
